feat(sprint1+2): RBAC, datos de referencia y corrección de propiedad
Sprint 1 — RBAC:
- Flyway V1 (baseline) y V2 (tabla rol, FK users.rol_id, 3 roles seed)
- Entidad Rol + RolRepository + RolService + RolController (/api/roles)
- User refactorizado: nombre, email, FK rol_id; UserRepository.existsByUsername
- DTOs actualizados: CreateUserRequest (nombre/email/rolId), UserResponse (rol),
  LoginResponse (token/rol/nombre)
- JwtService.generateToken incluye claim 'rol'
- UserDetailsServiceImpl mapea rol a GrantedAuthority ROLE_<ROL>
- UserService.login retorna nombre y rol en respuesta
- UserController renombrado a /api/usuarios
- SecurityConfig: /api/usuarios requiere ROLE_ADMINISTRADOR; @EnableMethodSecurity

Sprint 2 — Datos de referencia y corrección de propiedad:
- Flyway V3: elimina ciudad/capacidad/precio_por_noche/creado_en de propiedad;
  agrega descripcion/activa; crea tabla canal (5 seed) y temporada
- Property: elimina 4 campos inventados, agrega descripcion y activa (soft-delete)
- PropertyController renombrado a /api/propiedades
- PropertyService.delete: soft-delete (activa=false, sin deleteById)
- Canal: entidad/repo/dto/servicio/controller (GET /api/canales, solo lectura)
- Temporada: CRUD completo en /api/temporadas con validación fechaInicio < fechaFin
- SecurityConfig: POST/PUT/DELETE en propiedades/canales/temporadas → ROLE_ADMINISTRADOR
- DevelopmentDataSeeder desactivado (@Profile("never"))
- Fixes en cascada: ReservationService (sin validateGuestCount), InvoiceService
  (subtotal desde request), CreateInvoiceRequest (+subtotal), tests ajustados

Tests: 54 aprobados, 0 fallos

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>